Add book collections add change directory of collection

--- a/_config.yml
+++ b/_config.yml
@@ -55,8 +55,12 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
+collections_dir: "_collections"
+
 collections:
   mysql:
     output: true
   principles:
+    output: true
+  books:
     output: true
