--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,47 @@ collections:
     name: "Symfony"
     position: 5
     output: true
-  webpack:
-    name: "Webpack"
+  javascript:
+    name: "Javascript"
     position: 6
     output: true
-
+  webpack:
+    name: "Webpack"
+    position: 7
+    output: true
+  network-and-security:
+    name: "Network and security"
+    position: 8
+    output: true
+  linux:
+    name: "Linux"
+    position: 9
+    output: true
+  management:
+    name: "Management"
+    position: 10
+    output: true
+  testing-ci-cd:
+    name: "Testing & CI/CD"
+    position: 11
+    output: true
+  devops:
+    name: "DevOps"
+    position: 12
+    output: true
+  aws:
+    name: "AWS"
+    position: 13
+    output: true
+  google-cloud:
+    name: "Google Cloud"
+    position: 14
+    output: true
+  ai-and-big-data:
+    name: "AI & Big Data"
+    position: 15
+    output: true
+  flutter:
+    name: "Flutter"
+    position: 16
+    output: true
