--- a/_config.yml
+++ b/_config.yml
@@ -130,3 +130,7 @@ collections:
     name: "Flutter"
     position: 18
     output: true
+  sass:
+    name: "SASS"
+    position: 19
+    output: true
